# quizbit

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.bat  build.sh  main.c
core/: access.c  auth.c  database.c
core/database/: db.c
sources/: src.c  src.h
utils/: utils.c  utils.h
